parser/output/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    BADCOMMENT
    BAD_STRING
    BAD_URI

Grammar

Rule 0     S' -> stylesheet
Rule 1     empty -> <empty>
Rule 2     space-opt -> space
Rule 3     space-opt -> empty
Rule 4     space -> space-delimiter space
Rule 5     space -> space-delimiter
Rule 6     space-delimiter -> whitespace
Rule 7     space-delimiter -> blockcomment
Rule 8     space-delimiter -> htmlcomment
Rule 9     whitespace -> SPACE
Rule 10    blockcomment -> BLOCKCOMMENT
Rule 11    htmlcomment -> CDO
Rule 12    htmlcomment -> CDC
Rule 13    stylesheet -> charset-opt imports-opt styles-opt
Rule 14    charset-opt -> charset
Rule 15    charset-opt -> empty
Rule 16    charset -> SYM_CHARSET STRING space-opt SEMICOLON space-opt
Rule 17    imports-opt -> imports
Rule 18    imports-opt -> empty
Rule 19    imports -> import imports
Rule 20    imports -> import
Rule 21    import -> SYM_IMPORT space-opt _before-mediaquery import-src media-queries-opt _after-mediaquery SEMICOLON space-opt
Rule 22    import-src -> value-string
Rule 23    import-src -> value-uri
Rule 24    media-queries-opt -> media-queries
Rule 25    media-queries-opt -> empty
Rule 26    media-queries -> media-query COMMA space-opt media-queries
Rule 27    media-queries -> media-query
Rule 28    media-query -> media-limited-opt media-typed
Rule 29    media-query -> media-expressions
Rule 30    media-limited-opt -> media-limited
Rule 31    media-limited-opt -> empty
Rule 32    media-limited -> KEY_ONLY space-opt
Rule 33    media-limited -> KEY_NOT space-opt
Rule 34    media-typed -> media-type KEY_AND space-opt media-expressions
Rule 35    media-typed -> media-type
Rule 36    media-type -> IDENTIFIER space-opt
Rule 37    media-expressions -> media-expression KEY_AND space-opt media-expressions
Rule 38    media-expressions -> media-expression
Rule 39    media-expression -> LPAREN space-opt media-feature media-value-opt RPAREN space-opt
Rule 40    media-feature -> IDENTIFIER space-opt
Rule 41    media-value-opt -> media-value
Rule 42    media-value-opt -> empty
Rule 43    media-value -> COLON space-opt value
Rule 44    styles-opt -> styles
Rule 45    styles-opt -> empty
Rule 46    styles -> style styles
Rule 47    styles -> style
Rule 48    style -> page
Rule 49    style -> media
Rule 50    style -> ruleset
Rule 51    page -> SYM_PAGE space-opt pseudo-page-opt LBRACE space-opt declarations RBRACE space-opt
Rule 52    pseudo-page-opt -> pseudo-page
Rule 53    pseudo-page-opt -> empty
Rule 54    pseudo-page -> COLON IDENTIFIER space-opt
Rule 55    media -> _before-mediaquery SYM_MEDIA space-opt media-queries _after-mediaquery LBRACE space-opt styles-opt RBRACE space-opt
Rule 56    _before-mediaquery -> <empty>
Rule 57    _after-mediaquery -> <empty>
Rule 58    ruleset -> selectors LBRACE space-opt declarations RBRACE space-opt
Rule 59    selectors -> selector COMMA space-opt selectors
Rule 60    selectors -> selector
Rule 61    selector -> simple-selector combinator selector
Rule 62    selector -> simple-selector space-opt
Rule 63    simple-selector -> type-selector selector-rules-opt
Rule 64    simple-selector -> selector-rules
Rule 65    type-selector -> element-selector
Rule 66    type-selector -> all-selector
Rule 67    element-selector -> namespace-prefix-opt element-name
Rule 68    all-selector -> namespace-prefix-opt OP_MUL
Rule 69    namespace-prefix-opt -> namespace-prefix
Rule 70    namespace-prefix-opt -> empty
Rule 71    namespace-prefix -> NAMESPACE_PREFIX
Rule 72    element-name -> IDENTIFIER
Rule 73    selector-rules-opt -> selector-rules
Rule 74    selector-rules-opt -> empty
Rule 75    selector-rules -> selector-rule selector-rules
Rule 76    selector-rules -> selector-rule
Rule 77    selector-rule -> hash
Rule 78    selector-rule -> class
Rule 79    selector-rule -> attribute
Rule 80    selector-rule -> pseudo
Rule 81    selector-rule -> negation
Rule 82    combinator -> space-opt combinator-op
Rule 83    combinator -> space
Rule 84    combinator-op -> OP_PLUS space-opt
Rule 85    combinator-op -> OP_GT space-opt
Rule 86    combinator-op -> OP_TILDE space-opt
Rule 87    hash -> HASH
Rule 88    class -> DOT IDENTIFIER
Rule 89    attribute -> LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
Rule 90    attribute-match-opt -> attribute-match
Rule 91    attribute-match-opt -> empty
Rule 92    attribute-match -> attribute-op attribute-value
Rule 93    attribute-op -> OP_PREFIXMATCH space-opt
Rule 94    attribute-op -> OP_SUFFIXMATCH space-opt
Rule 95    attribute-op -> OP_SUBSTRINGMATCH space-opt
Rule 96    attribute-op -> OP_INCLUDES space-opt
Rule 97    attribute-op -> OP_DASHMATCH space-opt
Rule 98    attribute-op -> OP_EQUALS space-opt
Rule 99    attribute-value -> IDENTIFIER space-opt
Rule 100   attribute-value -> STRING space-opt
Rule 101   pseudo -> COLON pseudo-selector
Rule 102   pseudo -> COLON COLON pseudo-selector
Rule 103   pseudo-selector -> IDENTIFIER
Rule 104   pseudo-selector -> pseudo-function
Rule 105   pseudo-function -> FUNCTION space-opt pseudo-expression RPAREN
Rule 106   pseudo-expression -> pseudo-term pseudo-expression
Rule 107   pseudo-expression -> pseudo-term
Rule 108   pseudo-term -> OP_PLUS space-opt
Rule 109   pseudo-term -> OP_MINUS space-opt
Rule 110   pseudo-term -> DIMENSION space-opt
Rule 111   pseudo-term -> NUMBER space-opt
Rule 112   pseudo-term -> STRING space-opt
Rule 113   pseudo-term -> IDENTIFIER space-opt
Rule 114   negation -> NOT_SELECTOR space-opt negation-argument RPAREN
Rule 115   negation-argument -> type-selector space-opt
Rule 116   negation-argument -> hash space-opt
Rule 117   negation-argument -> class space-opt
Rule 118   negation-argument -> attribute space-opt
Rule 119   negation-argument -> pseudo space-opt
Rule 120   declarations -> declaration-opt SEMICOLON space-opt declarations
Rule 121   declarations -> declaration-opt
Rule 122   declaration-opt -> declaration
Rule 123   declaration-opt -> empty
Rule 124   declaration -> property COLON space-opt value flag-opt
Rule 125   property -> IDENTIFIER space-opt
Rule 126   flag-opt -> flag
Rule 127   flag-opt -> empty
Rule 128   _before-flag -> <empty>
Rule 129   _after-flag -> <empty>
Rule 130   flag -> _before-flag BANG space-opt flag-type _after-flag
Rule 131   flag-type -> KEY_IMPORTANT space-opt
Rule 132   value -> value-term value-op-opt value
Rule 133   value -> value-term
Rule 134   value-op-opt -> value-op
Rule 135   value-op-opt -> empty
Rule 136   value-op -> OP_DIV space-opt
Rule 137   value-op -> COMMA space-opt
Rule 138   value-term -> value-unary-op-opt value-numeric
Rule 139   value-term -> value-nonnumeric
Rule 140   value-unary-op-opt -> value-unary-op
Rule 141   value-unary-op-opt -> empty
Rule 142   value-unary-op -> OP_MINUS space-opt
Rule 143   value-unary-op -> OP_PLUS space-opt
Rule 144   value-numeric -> value-number
Rule 145   value-numeric -> value-percentage
Rule 146   value-numeric -> value-dimension
Rule 147   value-nonnumeric -> value-string
Rule 148   value-nonnumeric -> value-uri
Rule 149   value-nonnumeric -> value-identifier
Rule 150   value-nonnumeric -> value-hexcolor
Rule 151   value-nonnumeric -> value-function
Rule 152   value-number -> NUMBER space-opt
Rule 153   value-percentage -> PERCENTAGE space-opt
Rule 154   value-dimension -> DIMENSION space-opt
Rule 155   value-string -> STRING space-opt
Rule 156   value-uri -> URI space-opt
Rule 157   value-identifier -> IDENTIFIER space-opt
Rule 158   value-hexcolor -> HASH space-opt
Rule 159   value-function -> FUNCTION space-opt value RPAREN space-opt
Rule 160   property -> ms-property-hack IDENTIFIER space-opt
Rule 161   ms-property-hack -> OP_MUL
Rule 162   value-term -> ms-value-hack
Rule 163   ms-value-hack -> ms-scoped-function ms-arguments-opt RPAREN space-opt
Rule 164   ms-scoped-function -> IDENTIFIER COLON ms-scoped-function
Rule 165   ms-scoped-function -> IDENTIFIER DOT ms-scoped-function
Rule 166   ms-scoped-function -> IDENTIFIER DOT FUNCTION space-opt
Rule 167   ms-arguments-opt -> ms-arguments
Rule 168   ms-arguments-opt -> empty
Rule 169   ms-arguments -> ms-argument COMMA space-opt ms-arguments
Rule 170   ms-arguments -> ms-argument
Rule 171   ms-argument -> IDENTIFIER space-opt OP_EQUALS space-opt ms-value-term
Rule 172   ms-value-term -> value-unary-op-opt ms-value-numeric
Rule 173   ms-value-term -> ms-value-nonnumeric
Rule 174   ms-value-numeric -> value-number
Rule 175   ms-value-nonnumeric -> value-string
Rule 176   declarations -> declaration-opt error

Terminals, with rules where they appear

BADCOMMENT           : 
BAD_STRING           : 
BAD_URI              : 
BANG                 : 130
BLOCKCOMMENT         : 10
CDC                  : 12
CDO                  : 11
COLON                : 43 54 101 102 102 124 164
COMMA                : 26 59 137 169
DIMENSION            : 110 154
DOT                  : 88 165 166
FUNCTION             : 105 159 166
HASH                 : 87 158
IDENTIFIER           : 36 40 54 72 88 89 99 103 113 125 157 160 164 165 166 171
KEY_AND              : 34 37
KEY_IMPORTANT        : 131
KEY_NOT              : 33
KEY_ONLY             : 32
LBRACE               : 51 55 58
LBRACKET             : 89
LPAREN               : 39
NAMESPACE_PREFIX     : 71
NOT_SELECTOR         : 114
NUMBER               : 111 152
OP_DASHMATCH         : 97
OP_DIV               : 136
OP_EQUALS            : 98 171
OP_GT                : 85
OP_INCLUDES          : 96
OP_MINUS             : 109 142
OP_MUL               : 68 161
OP_PLUS              : 84 108 143
OP_PREFIXMATCH       : 93
OP_SUBSTRINGMATCH    : 95
OP_SUFFIXMATCH       : 94
OP_TILDE             : 86
PERCENTAGE           : 153
RBRACE               : 51 55 58
RBRACKET             : 89
RPAREN               : 39 105 114 159 163
SEMICOLON            : 16 21 120
SPACE                : 9
STRING               : 16 100 112 155
SYM_CHARSET          : 16
SYM_IMPORT           : 21
SYM_MEDIA            : 55
SYM_PAGE             : 51
URI                  : 156
error                : 176

Nonterminals, with rules where they appear

_after-flag          : 130
_after-mediaquery    : 21 55
_before-flag         : 130
_before-mediaquery   : 21 55
all-selector         : 66
attribute            : 79 118
attribute-match      : 90
attribute-match-opt  : 89
attribute-op         : 92
attribute-value      : 92
blockcomment         : 7
charset              : 14
charset-opt          : 13
class                : 78 117
combinator           : 61
combinator-op        : 82
declaration          : 122
declaration-opt      : 120 121 176
declarations         : 51 58 120
element-name         : 67
element-selector     : 65
empty                : 3 15 18 25 31 42 45 53 70 74 91 123 127 135 141 168
flag                 : 126
flag-opt             : 124
flag-type            : 130
hash                 : 77 116
htmlcomment          : 8
import               : 19 20
import-src           : 21
imports              : 17 19
imports-opt          : 13
media                : 49
media-expression     : 37 38
media-expressions    : 29 34 37
media-feature        : 39
media-limited        : 30
media-limited-opt    : 28
media-queries        : 24 26 55
media-queries-opt    : 21
media-query          : 26 27
media-type           : 34 35
media-typed          : 28
media-value          : 41
media-value-opt      : 39
ms-argument          : 169 170
ms-arguments         : 167 169
ms-arguments-opt     : 163
ms-property-hack     : 160
ms-scoped-function   : 163 164 165
ms-value-hack        : 162
ms-value-nonnumeric  : 173
ms-value-numeric     : 172
ms-value-term        : 171
namespace-prefix     : 69
namespace-prefix-opt : 67 68 89
negation             : 81
negation-argument    : 114
page                 : 48
property             : 124
pseudo               : 80 119
pseudo-expression    : 105 106
pseudo-function      : 104
pseudo-page          : 52
pseudo-page-opt      : 51
pseudo-selector      : 101 102
pseudo-term          : 106 107
ruleset              : 50
selector             : 59 60 61
selector-rule        : 75 76
selector-rules       : 64 73 75
selector-rules-opt   : 63
selectors            : 58 59
simple-selector      : 61 62
space                : 2 4 83
space-delimiter      : 4 5
space-opt            : 16 16 21 21 26 32 33 34 36 37 39 39 40 43 51 51 51 54 55 55 55 58 58 59 62 82 84 85 86 89 89 93 94 95 96 97 98 99 100 105 108 109 110 111 112 113 114 115 116 117 118 119 120 124 125 130 131 136 137 142 143 152 153 154 155 156 157 158 159 159 160 163 166 169 171 171
style                : 46 47
styles               : 44 46
styles-opt           : 13 55
stylesheet           : 0
type-selector        : 63 115
value                : 43 124 132 159
value-dimension      : 146
value-function       : 151
value-hexcolor       : 150
value-identifier     : 149
value-nonnumeric     : 139
value-number         : 144 174
value-numeric        : 138
value-op             : 134
value-op-opt         : 132
value-percentage     : 145
value-string         : 22 147 175
value-term           : 132 133
value-unary-op       : 140
value-unary-op-opt   : 138 172
value-uri            : 23 148
whitespace           : 6

Parsing method: LALR

state 0

    (0) S' -> . stylesheet
    (13) stylesheet -> . charset-opt imports-opt styles-opt
    (14) charset-opt -> . charset
    (15) charset-opt -> . empty
    (16) charset -> . SYM_CHARSET STRING space-opt SEMICOLON space-opt
    (1) empty -> .

    SYM_CHARSET     shift and go to state 2
    SYM_IMPORT      reduce using rule 1 (empty -> .)
    SYM_PAGE        reduce using rule 1 (empty -> .)
    HASH            reduce using rule 1 (empty -> .)
    DOT             reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)
    COLON           reduce using rule 1 (empty -> .)
    NOT_SELECTOR    reduce using rule 1 (empty -> .)
    NAMESPACE_PREFIX reduce using rule 1 (empty -> .)
    SYM_MEDIA       reduce using rule 1 (empty -> .)
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    charset                        shift and go to state 1
    stylesheet                     shift and go to state 3
    charset-opt                    shift and go to state 4
    empty                          shift and go to state 5

state 1

    (14) charset-opt -> charset .

    SYM_IMPORT      reduce using rule 14 (charset-opt -> charset .)
    SYM_PAGE        reduce using rule 14 (charset-opt -> charset .)
    HASH            reduce using rule 14 (charset-opt -> charset .)
    DOT             reduce using rule 14 (charset-opt -> charset .)
    LBRACKET        reduce using rule 14 (charset-opt -> charset .)
    COLON           reduce using rule 14 (charset-opt -> charset .)
    NOT_SELECTOR    reduce using rule 14 (charset-opt -> charset .)
    NAMESPACE_PREFIX reduce using rule 14 (charset-opt -> charset .)
    SYM_MEDIA       reduce using rule 14 (charset-opt -> charset .)
    OP_MUL          reduce using rule 14 (charset-opt -> charset .)
    IDENTIFIER      reduce using rule 14 (charset-opt -> charset .)
    $end            reduce using rule 14 (charset-opt -> charset .)


state 2

    (16) charset -> SYM_CHARSET . STRING space-opt SEMICOLON space-opt

    STRING          shift and go to state 6


state 3

    (0) S' -> stylesheet .



state 4

    (13) stylesheet -> charset-opt . imports-opt styles-opt
    (17) imports-opt -> . imports
    (18) imports-opt -> . empty
    (19) imports -> . import imports
    (20) imports -> . import
    (1) empty -> .
    (21) import -> . SYM_IMPORT space-opt _before-mediaquery import-src media-queries-opt _after-mediaquery SEMICOLON space-opt

    SYM_PAGE        reduce using rule 1 (empty -> .)
    HASH            reduce using rule 1 (empty -> .)
    DOT             reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)
    COLON           reduce using rule 1 (empty -> .)
    NOT_SELECTOR    reduce using rule 1 (empty -> .)
    NAMESPACE_PREFIX reduce using rule 1 (empty -> .)
    SYM_MEDIA       reduce using rule 1 (empty -> .)
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)
    SYM_IMPORT      shift and go to state 9

    imports-opt                    shift and go to state 7
    imports                        shift and go to state 8
    import                         shift and go to state 10
    empty                          shift and go to state 11

state 5

    (15) charset-opt -> empty .

    SYM_IMPORT      reduce using rule 15 (charset-opt -> empty .)
    SYM_PAGE        reduce using rule 15 (charset-opt -> empty .)
    HASH            reduce using rule 15 (charset-opt -> empty .)
    DOT             reduce using rule 15 (charset-opt -> empty .)
    LBRACKET        reduce using rule 15 (charset-opt -> empty .)
    COLON           reduce using rule 15 (charset-opt -> empty .)
    NOT_SELECTOR    reduce using rule 15 (charset-opt -> empty .)
    NAMESPACE_PREFIX reduce using rule 15 (charset-opt -> empty .)
    SYM_MEDIA       reduce using rule 15 (charset-opt -> empty .)
    OP_MUL          reduce using rule 15 (charset-opt -> empty .)
    IDENTIFIER      reduce using rule 15 (charset-opt -> empty .)
    $end            reduce using rule 15 (charset-opt -> empty .)


state 6

    (16) charset -> SYM_CHARSET STRING . space-opt SEMICOLON space-opt
    (2) space-opt -> . space
    (3) space-opt -> . empty
    (4) space -> . space-delimiter space
    (5) space -> . space-delimiter
    (1) empty -> .
    (6) space-delimiter -> . whitespace
    (7) space-delimiter -> . blockcomment
    (8) space-delimiter -> . htmlcomment
    (9) whitespace -> . SPACE
    (10) blockcomment -> . BLOCKCOMMENT
    (11) htmlcomment -> . CDO
    (12) htmlcomment -> . CDC

    SEMICOLON       reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 16
    BLOCKCOMMENT    shift and go to state 20
    CDO             shift and go to state 13
    CDC             shift and go to state 19

    htmlcomment                    shift and go to state 12
    whitespace                     shift and go to state 22
    space                          shift and go to state 14
    blockcomment                   shift and go to state 15
    space-opt                      shift and go to state 17
    space-delimiter                shift and go to state 18
    empty                          shift and go to state 21

state 7

    (13) stylesheet -> charset-opt imports-opt . styles-opt
    (44) styles-opt -> . styles
    (45) styles-opt -> . empty
    (46) styles -> . style styles
    (47) styles -> . style
    (1) empty -> .
    (48) style -> . page
    (49) style -> . media
    (50) style -> . ruleset
    (51) page -> . SYM_PAGE space-opt pseudo-page-opt LBRACE space-opt declarations RBRACE space-opt
    (55) media -> . _before-mediaquery SYM_MEDIA space-opt media-queries _after-mediaquery LBRACE space-opt styles-opt RBRACE space-opt
    (58) ruleset -> . selectors LBRACE space-opt declarations RBRACE space-opt
    (56) _before-mediaquery -> .
    (59) selectors -> . selector COMMA space-opt selectors
    (60) selectors -> . selector
    (61) selector -> . simple-selector combinator selector
    (62) selector -> . simple-selector space-opt
    (63) simple-selector -> . type-selector selector-rules-opt
    (64) simple-selector -> . selector-rules
    (65) type-selector -> . element-selector
    (66) type-selector -> . all-selector
    (75) selector-rules -> . selector-rule selector-rules
    (76) selector-rules -> . selector-rule
    (67) element-selector -> . namespace-prefix-opt element-name
    (68) all-selector -> . namespace-prefix-opt OP_MUL
    (77) selector-rule -> . hash
    (78) selector-rule -> . class
    (79) selector-rule -> . attribute
    (80) selector-rule -> . pseudo
    (81) selector-rule -> . negation
    (69) namespace-prefix-opt -> . namespace-prefix
    (70) namespace-prefix-opt -> . empty
    (87) hash -> . HASH
    (88) class -> . DOT IDENTIFIER
    (89) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (101) pseudo -> . COLON pseudo-selector
    (102) pseudo -> . COLON COLON pseudo-selector
    (114) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN
    (71) namespace-prefix -> . NAMESPACE_PREFIX

    $end            reduce using rule 1 (empty -> .)
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    SYM_PAGE        shift and go to state 44
    SYM_MEDIA       reduce using rule 56 (_before-mediaquery -> .)
    HASH            shift and go to state 29
    DOT             shift and go to state 31
    LBRACKET        shift and go to state 27
    COLON           shift and go to state 37
    NOT_SELECTOR    shift and go to state 30
    NAMESPACE_PREFIX shift and go to state 51

    selector-rules                 shift and go to state 23
    attribute                      shift and go to state 24
    namespace-prefix               shift and go to state 25
    type-selector                  shift and go to state 26
    _before-mediaquery             shift and go to state 28
    style                          shift and go to state 32
    media                          shift and go to state 33
    simple-selector                shift and go to state 34
    negation                       shift and go to state 35
    ruleset                        shift and go to state 36
    empty                          shift and go to state 38
    selector-rule                  shift and go to state 39
    styles                         shift and go to state 40
    hash                           shift and go to state 41
    element-selector               shift and go to state 42
    selector                       shift and go to state 43
    class                          shift and go to state 45
    namespace-prefix-opt           shift and go to state 46
    styles-opt                     shift and go to state 47
    pseudo                         shift and go to state 48
    selectors                      shift and go to state 49
    all-selector                   shift and go to state 50
    page                           shift and go to state 52

state 8

    (17) imports-opt -> imports .

    SYM_PAGE        reduce using rule 17 (imports-opt -> imports .)
    HASH            reduce using rule 17 (imports-opt -> imports .)
    DOT             reduce using rule 17 (imports-opt -> imports .)
    LBRACKET        reduce using rule 17 (imports-opt -> imports .)
    COLON           reduce using rule 17 (imports-opt -> imports .)
    NOT_SELECTOR    reduce using rule 17 (imports-opt -> imports .)
    NAMESPACE_PREFIX reduce using rule 17 (imports-opt -> imports .)
    SYM_MEDIA       reduce using rule 17 (imports-opt -> imports .)
    OP_MUL          reduce using rule 17 (imports-opt -> imports .)
    IDENTIFIER      reduce using rule 17 (imports-opt -> imports .)
    $end            reduce using rule 17 (imports-opt -> imports .)


state 9

    (21) import -> SYM_IMPORT . space-opt _before-mediaquery import-src media-queries-opt _after-mediaquery SEMICOLON space-opt
    (2) space-opt -> . space
    (3) space-opt -> . empty
    (4) space -> . space-delimiter space
    (5) space -> . space-delimiter
    (1) empty -> .
    (6) space-delimiter -> . whitespace
    (7) space-delimiter -> . blockcomment
    (8) space-delimiter -> . htmlcomment
    (9) whitespace -> . SPACE
    (10) blockcomment -> . BLOCKCOMMENT
    (11) htmlcomment -> . CDO
    (12) htmlcomment -> . CDC

    STRING          reduce using rule 1 (empty -> .)
    URI             reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 16
    BLOCKCOMMENT    shift and go to state 20
    CDO             shift and go to state 13
    CDC             shift and go to state 19

    htmlcomment                    shift and go to state 12
    whitespace                     shift and go to state 22
    space                          shift and go to state 14
    space-delimiter                shift and go to state 18
    space-opt                      shift and go to state 53
    blockcomment                   shift and go to state 15
    empty                          shift and go to state 21

state 10

    (19) imports -> import . imports
    (20) imports -> import .
    (19) imports -> . import imports
    (20) imports -> . import
    (21) import -> . SYM_IMPORT space-opt _before-mediaquery import-src media-queries-opt _after-mediaquery SEMICOLON space-opt

    SYM_PAGE        reduce using rule 20 (imports -> import .)
    HASH            reduce using rule 20 (imports -> import .)
    DOT             reduce using rule 20 (imports -> import .)
    LBRACKET        reduce using rule 20 (imports -> import .)
    COLON           reduce using rule 20 (imports -> import .)
    NOT_SELECTOR    reduce using rule 20 (imports -> import .)
    NAMESPACE_PREFIX reduce using rule 20 (imports -> import .)
    SYM_MEDIA       reduce using rule 20 (imports -> import .)
    OP_MUL          reduce using rule 20 (imports -> import .)
    IDENTIFIER      reduce using rule 20 (imports -> import .)
    $end            reduce using rule 20 (imports -> import .)
    SYM_IMPORT      shift and go to state 9

    imports                        shift and go to state 54
    import                         shift and go to state 10

state 11

    (18) imports-opt -> empty .

    SYM_PAGE        reduce using rule 18 (imports-opt -> empty .)
    HASH            reduce using rule 18 (imports-opt -> empty .)
    DOT             reduce using rule 18 (imports-opt -> empty .)
    LBRACKET        reduce using rule 18 (imports-opt -> empty .)
    COLON           reduce using rule 18 (imports-opt -> empty .)
    NOT_SELECTOR    reduce using rule 18 (imports-opt -> empty .)
    NAMESPACE_PREFIX reduce using rule 18 (imports-opt -> empty .)
    SYM_MEDIA       reduce using rule 18 (imports-opt -> empty .)
    OP_MUL          reduce using rule 18 (imports-opt -> empty .)
    IDENTIFIER      reduce using rule 18 (imports-opt -> empty .)
    $end            reduce using rule 18 (imports-opt -> empty .)


state 12

    (8) space-delimiter -> htmlcomment .

    SPACE           reduce using rule 8 (space-delimiter -> htmlcomment .)
    BLOCKCOMMENT    reduce using rule 8 (space-delimiter -> htmlcomment .)
    CDO             reduce using rule 8 (space-delimiter -> htmlcomment .)
    CDC             reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_MINUS        reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_PLUS         reduce using rule 8 (space-delimiter -> htmlcomment .)
    STRING          reduce using rule 8 (space-delimiter -> htmlcomment .)
    URI             reduce using rule 8 (space-delimiter -> htmlcomment .)
    IDENTIFIER      reduce using rule 8 (space-delimiter -> htmlcomment .)
    HASH            reduce using rule 8 (space-delimiter -> htmlcomment .)
    FUNCTION        reduce using rule 8 (space-delimiter -> htmlcomment .)
    NUMBER          reduce using rule 8 (space-delimiter -> htmlcomment .)
    PERCENTAGE      reduce using rule 8 (space-delimiter -> htmlcomment .)
    DIMENSION       reduce using rule 8 (space-delimiter -> htmlcomment .)
    NAMESPACE_PREFIX reduce using rule 8 (space-delimiter -> htmlcomment .)
    RPAREN          reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_MUL          reduce using rule 8 (space-delimiter -> htmlcomment .)
    RBRACE          reduce using rule 8 (space-delimiter -> htmlcomment .)
    SEMICOLON       reduce using rule 8 (space-delimiter -> htmlcomment .)
    error           reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_DIV          reduce using rule 8 (space-delimiter -> htmlcomment .)
    COMMA           reduce using rule 8 (space-delimiter -> htmlcomment .)
    BANG            reduce using rule 8 (space-delimiter -> htmlcomment .)
    LPAREN          reduce using rule 8 (space-delimiter -> htmlcomment .)
    SYM_IMPORT      reduce using rule 8 (space-delimiter -> htmlcomment .)
    SYM_PAGE        reduce using rule 8 (space-delimiter -> htmlcomment .)
    DOT             reduce using rule 8 (space-delimiter -> htmlcomment .)
    LBRACKET        reduce using rule 8 (space-delimiter -> htmlcomment .)
    COLON           reduce using rule 8 (space-delimiter -> htmlcomment .)
    NOT_SELECTOR    reduce using rule 8 (space-delimiter -> htmlcomment .)
    SYM_MEDIA       reduce using rule 8 (space-delimiter -> htmlcomment .)
    $end            reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_GT           reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_TILDE        reduce using rule 8 (space-delimiter -> htmlcomment .)
    LBRACE          reduce using rule 8 (space-delimiter -> htmlcomment .)
    KEY_ONLY        reduce using rule 8 (space-delimiter -> htmlcomment .)
    KEY_NOT         reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_PREFIXMATCH  reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_SUFFIXMATCH  reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_SUBSTRINGMATCH reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_INCLUDES     reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_DASHMATCH    reduce using rule 8 (space-delimiter -> htmlcomment .)
    OP_EQUALS       reduce using rule 8 (space-delimiter -> htmlcomment .)
    RBRACKET        reduce using rule 8 (space-delimiter -> htmlcomment .)
    KEY_AND         reduce using rule 8 (space-delimiter -> htmlcomment .)
    KEY_IMPORTANT   reduce using rule 8 (space-delimiter -> htmlcomment .)


state 13

    (11) htmlcomment -> CDO .
